--- a/roles/keycloak/tasks/main.yml
+++ b/roles/keycloak/tasks/main.yml
@@ -14,16 +14,16 @@
   template: src=templates/ingress.yml dest=/tmp/ingress.yml
 
 - name: Deploy PV
-  command: kubectl apply -f /tmp/pv.yml -n usine
+  command: kubectl apply -f /tmp/pv.yml
 
 - name: Deploy PVC
-  command: kubectl apply -f /tmp/pvc.yml -n usine
+  command: kubectl apply -f /tmp/pvc.yml
 
 - name: Deploy deployment
-  command: kubectl apply -f /tmp/deployment.yml -n usine
+  command: kubectl apply -f /tmp/deployment.yml
 
 - name: Deploy Service
-  command: kubectl apply -f /tmp/service.yml -n usine
+  command: kubectl apply -f /tmp/service.yml
 
 - name: Deploy Ingress
-  command: kubectl apply -f /tmp/ingress.yml -n usine
+  command: kubectl apply -f /tmp/ingress.yml
