--- a/inventories/prod/group_vars/all.yaml
+++ b/inventories/prod/group_vars/all.yaml
@@ -1,6 +1,6 @@
 domaine: k8.wildwidewest.xyz
 
-registry: registry.k8.wildwidewest.xyz
+registry: registry.{{domaine}}
 
 big_node: vps257315.ovh.net
 nfs_server: 51.255.42.138
@@ -9,14 +9,21 @@ jenkins_folder: jenkins
 nexus_folder: nexus
 keycloak_folder: keycloak
 
+traefik:
+  ssl: True
+
+kubeadm:
+  init:
+    options:
+
 certificates:
-  - meltingpoc.k8.wildwidewest.xyz
-  - jenkins.k8.wildwidewest.xyz
-  - nexus.k8.wildwidewest.xyz
-  - keycloak.k8.wildwidewest.xyz
-  - kibana.k8.wildwidewest.xyz
-  - helmet.k8.wildwidewest.xyz
-  - recyclette.k8.wildwidewest.xyz
-  - wallboard.k8.wildwidewest.xyz
-  - wallboard-back.k8.wildwidewest.xyz
-  - bus.wallboard.k8.wildwidewest.xyz
+  - jenkins.{{domaine}}
+  - meltingpoc.{{domaine}}
+  - nexus.{{domaine}}
+  - keycloak.{{domaine}}
+  - kibana.{{domaine}}
+  - helmet.{{domaine}}
+  - recyclette.{{domaine}}
+  - wallboard.{{domaine}}
+  - wallboard-back.{{domaine}}
+  - bus.wallboard.{{domaine}}
