--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,5 +1,5 @@
 
-- template: 
+- template:
     src: "templates/{{item}}"
     dest: "/tmp/{{item}}"
   with_items:
@@ -23,3 +23,4 @@
 - name: create rolebinding admin
   command: kubectl create rolebinding jenkins-admin-binding --clusterrole=admin --user=system:serviceaccount:default:default
   become: yes
+  ignore_errors: true
