--- a/roles/keycloak/templates/deployment.yml
+++ b/roles/keycloak/templates/deployment.yml
@@ -30,6 +30,8 @@ spec:
         ports:
         - containerPort: 8080
         env:
+        - name: DB_VENDOR
+          value: POSTGRES
         - name: KEYCLOAK_USER
           value: admin
         - name: KEYCLOAK_PASSWORD
@@ -46,5 +48,3 @@ spec:
       - name: keycloak-home
         persistentVolumeClaim:
           claimName: keycloak-pvc
-      nodeSelector:
-        server_type: big
