--- a/roles/keycloak/templates/ingress.yml
+++ b/roles/keycloak/templates/ingress.yml
@@ -4,6 +4,7 @@ metadata:
   name: keycloak
   annotations:
     kubernetes.io/ingress.class: traefik
+    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
     traefik.frontend.rule.type: PathPrefixStrip
 spec:
   tls:
