--- a/softwarefactory.yml
+++ b/softwarefactory.yml
@@ -31,14 +31,18 @@
     - { role: cert-manager, tags: cert-manager }
     - { role: traefik, tags: traefik }
 
-- hosts: cert-manager
-  roles:
-    - { role: cert-manager, tags: cert-manager }
-    - { role: traefik, tags: traefik }
-
 - hosts: kubernetes-tools
   roles:
     - { role: secrets, tags: secrets }
     - { role: nexus, tags: nexus }
     - { role: jenkins, tags: jenkins }
     - { role: keycloak, tags: keycloak }
+
+- hosts: cert-manager
+  roles:
+    - { role: cert-manager, tags: cert-manager }
+    - { role: traefik, tags: traefik }
+
+- hosts: rook
+  roles:
+    - { role: rook, tags: rook }
