mise en place de rook

--- a/roles/rook/files/filesystem.yml
+++ b/roles/rook/files/filesystem.yml
@@ -2,7 +2,7 @@ apiVersion: ceph.rook.io/v1alpha1
 kind: Filesystem
 metadata:
   name: myfs
-  namespace: rook-ceph-system
+  namespace: rook-ceph
 spec:
   metadataPool:
     replicated:
