--- a/roles/rook/tasks/main.yml
+++ b/roles/rook/tasks/main.yml
@@ -20,6 +20,15 @@
   become_user: root
   when: "'rook-ceph' not in helm_list.stdout"
 
+- name: Copy Cluster Resource
+  copy:
+    src: files/cluster.yml
+    dest: /tmp/cluster.yml
+
+- command: kubectl apply -f /tmp/cluster.yml
+  become: yes
+  become_user: root
+
 - name: Copy FileSystem Resource
   copy:
     src: files/filesystem.yml
