--- a/roles/secrets/tasks/main.yml
+++ b/roles/secrets/tasks/main.yml
@@ -7,3 +7,4 @@
   include_tasks: create-secret.yml
   with_items:
     - { secret: 'dropbox', key: 'token' , value: 'OHM2M0V3a3Mwb0FBQUFBQUFBQUFCLWpWcjZaOFhGdS11ZEdOV3AzcXI3ZVkzN0tGR2VuMjlqdDZ2VlFUS1NtYg=='}
+    - { secret: 'dropboximages', key: 'token' , value: 'OFpSbThoS3I3UEFBQUFBQUFBQUFGRlk5dzNDVFdkY1pZcklpYVAwU2JjX2xYVUg2eHVFbFJSYnF1bEwycmlBSwo='}
