--- a/roles/helm/tasks/main.yml
+++ b/roles/helm/tasks/main.yml
@@ -22,7 +22,7 @@
   become_user: root
 
 - name: Create Role Binding
-  command: kubectl create clusterrolebinding add-on-01-cluster-admin --clusterrole=01-cluster-admin --serviceaccount=kube-system:default
+  command: kubectl create clusterrolebinding add-on-cluster-admin --clusterrole=cluster-admin --serviceaccount=kube-system:default
   ignore_errors: True
   become: yes
   become_user: root
