--- a/roles/kafka/templates/deployment.yml
+++ b/roles/kafka/templates/deployment.yml
@@ -16,7 +16,9 @@ spec:
         - containerPort: 9092
         env:
         - name: KAFKA_ZOOKEEPER_CONNECT
-          value: 127.0.0.1:2181
+          value: localhost:2181
+        - name: KAFKA_ADVERTISED_PORT
+          value: "9092"
         - name: KAFKA_ADVERTISED_HOST_NAME
           value: 127.0.0.1
       - name: zookeeper
