--- a/roles/secrets/tasks/create-docker-secret.yml
+++ b/roles/secrets/tasks/create-docker-secret.yml
@@ -1,6 +1,5 @@
-- command: "kubectl get secret {{item.name}}"
+- command: "kubectl get secret"
   register: command_result
-  ignore_errors: True
-  
+
 - command: "kubectl create secret docker-registry {{item.name}} --docker-server={{item.server}} --docker-username={{item.username}} --docker-password={{item.password}} --docker-email={{item.email}}"
   when: 'item.name not in command_result.stdout'
