--- a/roles/secrets/tasks/create-secret.yml
+++ b/roles/secrets/tasks/create-secret.yml
@@ -1,11 +1,5 @@
-- command: "kubectl get secret {{item.secret}}"
-  register: command_result
-  ignore_errors: True
-
-- template: 
+- template:
     src: secret.yml
     dest: /tmp/secret.yml
-  #when: 'item.secret not in command_result.stdout'
 
-- command: "kubectl create -f /tmp/secret.yml"
-  when: 'item.secret not in command_result.stdout'
+- command: "kubectl apply -f /tmp/secret.yml"
