--- a/roles/cert-manager/tasks/main.yml
+++ b/roles/cert-manager/tasks/main.yml
@@ -1,9 +1,17 @@
+- name: Helm List
+  command: ./helm list
+  args:
+    chdir: /root/linux-amd64
+  become: yes
+  become_user: root
+  register: helm_list
+
 - name: Install cert-manager
   command: ./helm install --name cert-manager --namespace kube-system stable/cert-manager
   args: 
     chdir: ~/linux-amd64
-  ignore_errors: true
   become: yes
+  when: "'cert-manager' not in helm_list.stdout"
 
 - name: Copy Issuer
   template:
