--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -8,17 +8,25 @@
 
 - command: "kubectl apply -f /tmp/{{item}}"
   become: yes
-  ignore_errors: true
   with_items:
     - pv.yml
     - ingress.yml
+
+- name: Helm List
+  command: ./helm list
+  args:
+    chdir: /root/linux-amd64
+  become: yes
+  become_user: root
+  register: helm_list
 
 - name: Install Jenkins
   command: ./helm install --name jenkins stable/jenkins
   args: 
     chdir: ~/linux-amd64
-  ignore_errors: true
   become: yes
+  when: "'jenkins' not in helm_list.stdout"
+  when: "'jenkins' not in helm_list.stdout"
 
 - name: create rolebinding admin
   command: kubectl create rolebinding jenkins-admin-binding --clusterrole=admin --user=system:serviceaccount:default:default
