--- a/roles/kibana/tasks/main.yml
+++ b/roles/kibana/tasks/main.yml
@@ -4,20 +4,57 @@
   become: yes
   become_user: root
 
-#- command: ./helm install --name elasticsearch incubator/elasticsearch --set master.persistence.enabled=false --set data.persistence.enabled=false --set master.replicas=1 --set data.replicas=1
-#  args:
-#    chdir: /root/linux-amd64
-#  become: yes
-#  become_user: root
+- name: Helm List
+  command: ./helm list
+  args:
+    chdir: /root/linux-amd64
+  become: yes
+  become_user: root
+  register: helm_list
 
-#- command: ./helm install --name kibana stable/kibana
-#  args:
-#    chdir: /root/linux-amd64
-#  become: yes
-#  become_user: root
+- name: "Status file /root/linux-amd64/helm-elasticsearch"
+  stat:
+    path:  "/root/linux-amd64/helm-elasticsearch"
+  register: helm_elasticsearch_status
+  become: yes
+  become_user: root
 
-- name: Copy ingress
-  template: src=templates/ingress.yml dest=/tmp/ingress.yml
+- command: git clone https://github.com/clockworksoul/helm-elasticsearch.git
+  args:
+    chdir: /root/linux-amd64
+  become: yes
+  become_user: root
+  when: helm_elasticsearch_status.stat.exists == False
 
-- name: Deploy ingress
-  command: kubectl apply -f /tmp/ingress.yml
+- command: ./helm install --name elasticsearch helm-elasticsearch
+  args:
+    chdir: /root/linux-amd64
+  become: yes
+  become_user: root
+  when: "'elasticsearch' not in helm_list.stdout"
+
+- name: Copy configs
+  template:
+    src: templates/{{item}}.yml
+    dest: /tmp/{{item}}.yml
+  with_items:
+    - ingress
+    - pv_data_logstash_0
+    - filebeat-ds
+    - logstash-config
+    - logstash-deployment
+    - logstash-service
+  become: yes
+  become_user: root
+
+- name: Deploy configs
+  command: kubectl apply -f /tmp/{{item}}.yml
+  with_items:
+    - ingress
+    - pv_data_logstash_0
+    - filebeat-ds
+    - logstash-config
+    - logstash-deployment
+    - logstash-service
+  become: yes
+  become_user: root
