--- a/softwarefactory.yml
+++ b/softwarefactory.yml
@@ -52,3 +52,7 @@
 - hosts: kibana
   roles:
     - { role: kibana, tags: kibana }
+
+- hosts: reboot
+  roles:
+    - { role: reboot, tags: reboot }
