--- a/roles/cert-manager/tasks/main.yml
+++ b/roles/cert-manager/tasks/main.yml
@@ -18,11 +18,18 @@
     src: issuer.yaml
     dest:  /tmp/issuer.yaml
 
-- name: Delete Issuer
-  command: kubectl delete issuer letsencrypt-prod -n kube-system
-  ignore_errors: yes
+- name: Check
+  command: kubectl get issuer -n kube-system
   become: yes
   become_user: root
+  register: issuer_check
+
+- name: Delete Issuer
+  command: kubectl delete issuer letsencrypt-prod -n kube-system
+  ignore_errors: True
+  become: yes
+  become_user: root
+  when: "'letsencrypt-prod' in issuer_check.stdout"
 
 - name: Create Issuer
   command: kubectl apply -f  /tmp/issuer.yaml -n kube-system
@@ -34,11 +41,18 @@
     src: certificate.yaml
     dest:  /tmp/certificate.yaml
 
-- name: Delete Certificate
-  command: kubectl delete certificate traefik-cert -n kube-system
-  ignore_errors: yes
+- name: Check
+  command: kubectl get certificate -n kube-system
   become: yes
   become_user: root
+  register: certificate_check
+
+- name: Delete Certificate
+  command: kubectl delete certificate traefik-cert -n kube-system
+  ignore_errors: True
+  become: yes
+  become_user: root
+  when: "'traefik-cert' in certificate_check.stdout"
 
 - name: Create Certificate
   command: kubectl apply -f  /tmp/certificate.yaml -n kube-system
