--- a/roles/nexus/tasks/main.yml
+++ b/roles/nexus/tasks/main.yml
@@ -4,7 +4,6 @@
     dest: "/tmp/{{item}}"
   with_items:
     - pv.yml
-    - service-registry.yml
     - ingress.yml
     - ingress-registry.yml
 
@@ -12,7 +11,6 @@
   become: yes
   with_items:
     - pv.yml
-    - service-registry.yml
     - ingress.yml
     - ingress-registry.yml
 
@@ -33,3 +31,4 @@
 
 - command: kubectl expose deployment nexus-sonatype-nexus --name=registry --port=8082 --type=LoadBalancer
   become: yes
+  become_user: root
