--- a/roles/keycloak/templates/pv.yml
+++ b/roles/keycloak/templates/pv.yml
@@ -1,28 +1,16 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: keycloak-pv
+  name: pv-keycloak
 spec:
+  accessModes:
+  - ReadWriteOnce
   capacity:
     storage: 1Gi
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
-  storageClassName: slow
+  claimRef:
+    namespace: default
+    name: pvc-keycloak
   nfs:
     path: /var/nfs/keycloak
-    server: {{nfs_server}}
-
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: keycloak-pv
-spec:
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteMany
-  nfs:
-    # FIXME: use the right IP
-    server: {{nfs_server}}
-    path: "/var/nfs/keycloak"
+    server: "{{groups['nfs-master'][0] }}"
+  persistentVolumeReclaimPolicy: Recycle
