--- a/roles/keycloak/templates/pvc.yml
+++ b/roles/keycloak/templates/pvc.yml
@@ -1,10 +1,10 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: keycloak-pvc
+  name: pvc-keycloak
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
