--- a/roles/jenkins/templates/pv.yml
+++ b/roles/jenkins/templates/pv.yml
@@ -8,6 +8,6 @@ spec:
   accessModes:
   - ReadWriteOnce
   nfs:
-    path: /var/nfs/jenkins
+    path: /zpool-126262/WWWJENKINS
     server: "{{groups['nfs-master'][0] }}"
   persistentVolumeReclaimPolicy: Recycle
