--- a/roles/keycloak/templates/deployment.yml
+++ b/roles/keycloak/templates/deployment.yml
@@ -10,7 +10,7 @@ spec:
         app: keycloak
     spec:
       containers:
-      - name: keycloak-postgres
+      - name: postgres
         image: postgres
         ports:
         - containerPort: 5432
@@ -24,12 +24,16 @@ spec:
           value: keycloak
         - name: POSTGRES_PASSWORD
           value: password
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata
       - name: keycloak
         image: jboss/keycloak
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
         env:
+        - name: DB_ADDR
+          value: 127.0.0.1
         - name: DB_VENDOR
           value: POSTGRES
         - name: KEYCLOAK_USER
