--- a/roles/rook/tasks/main.yml
+++ b/roles/rook/tasks/main.yml
@@ -1,11 +1,11 @@
-- command: ./helm repo add rook-master https://charts.rook.io/master
+- command: helm repo add rook-master https://charts.rook.io/master
   args:
     chdir: /root/linux-amd64
   become: yes
   become_user: root
 
 - name: Helm List
-  command: ./helm list
+  command: helm list
   args:
     chdir: /root/linux-amd64
   become: yes
@@ -13,7 +13,7 @@
   register: helm_list
 
 - name: helm install rook-ceph
-  command: ./helm install --namespace rook-ceph-system rook-master/rook-ceph --name rook-ceph --version v0.7.0-160.g3060813
+  command: helm install --namespace rook-ceph-system rook-master/rook-ceph --name rook-ceph --version v0.7.0-160.g3060813
   args:
     chdir: /root/linux-amd64
   become: yes
