--- a/roles/cert-manager/tasks/main.yml
+++ b/roles/cert-manager/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Helm List
-  command: ./helm list
+  command: helm list
   args:
     chdir: /root/linux-amd64
   become: yes
@@ -7,7 +7,7 @@
   register: helm_list
 
 - name: Install cert-manager
-  command: ./helm install --name cert-manager --namespace kube-system stable/cert-manager
+  command: helm install --name cert-manager --namespace kube-system stable/cert-manager
   args: 
     chdir: ~/linux-amd64
   become: yes
