--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -13,7 +13,7 @@
     - ingress.yml
 
 - name: Helm List
-  command: ./helm list
+  command: helm list
   args:
     chdir: /root/linux-amd64
   become: yes
@@ -21,7 +21,7 @@
   register: helm_list
 
 - name: Install Jenkins
-  command: ./helm install --name jenkins stable/jenkins
+  command: helm install --name jenkins stable/jenkins
   args: 
     chdir: ~/linux-amd64
   become: yes
