--- a/roles/sonarqube/tasks/main.yml
+++ b/roles/sonarqube/tasks/main.yml
@@ -13,7 +13,7 @@
     - ingress.yml
 
 - name: Helm List
-  command: ./helm list
+  command: helm list
   args:
     chdir: /root/linux-amd64
   become: yes
@@ -21,7 +21,7 @@
   register: helm_list
 
 - name: Install sonarqube
-  command: ./helm install --name sonarqube stable/sonarqube
+  command: helm install --name sonarqube stable/sonarqube
   args: 
     chdir: ~/linux-amd64
   become: yes
