--- a/roles/jenkins-x/tasks/main.yml
+++ b/roles/jenkins-x/tasks/main.yml
@@ -1,12 +1,14 @@
 
-- template:
+- name: Copy Resources
+  template:
     src: "templates/{{item}}"
     dest: "/tmp/{{item}}"
   with_items:
     - pv.yml
     - ingress.yml
 
-- command: "kubectl apply -f /tmp/{{item}} -n jx"
+- name: Create Resources 
+  command: "kubectl apply -f /tmp/{{item}} -n jx"
   become: yes
   with_items:
     - pv.yml
