--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,12 +1,14 @@
 
-- template:
+- name: Copy Resources 
+  template:
     src: "templates/{{item}}"
     dest: "/tmp/{{item}}"
   with_items:
     - pv.yml
     - ingress.yml
 
-- command: "kubectl apply -f /tmp/{{item}}"
+- name: Create Resources
+  command: "kubectl apply -f /tmp/{{item}}"
   become: yes
   with_items:
     - pv.yml
@@ -14,16 +16,12 @@
 
 - name: Helm List
   command: helm list
-  args:
-    chdir: /root/linux-amd64
   become: yes
   become_user: root
   register: helm_list
 
 - name: Install Jenkins
   command: helm install --name jenkins stable/jenkins
-  args: 
-    chdir: ~/linux-amd64
   become: yes
   when: "'jenkins' not in helm_list.stdout"
 
