--- a/roles/nexus/templates/ingress-registry.yml
+++ b/roles/nexus/templates/ingress-registry.yml
@@ -3,9 +3,8 @@ kind: Ingress
 metadata:
   name: registry
   annotations:
-    kubernetes.io/ingress.class: traefik
+    kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
-    traefik.frontend.rule.type: PathPrefixStrip
 spec:
   rules:
   - host: registry.{{domaine}}
