--- a/roles/sonarqube/tasks/main.yml
+++ b/roles/sonarqube/tasks/main.yml
@@ -1,12 +1,14 @@
 
-- template:
+- name: Copy Resources 
+  template:
     src: "templates/{{item}}"
     dest: "/tmp/{{item}}"
   with_items:
     - pv.yml
     - ingress.yml
 
-- command: "kubectl apply -f /tmp/{{item}}"
+- name: Create Kubernetes Resources
+  command: "kubectl apply -f /tmp/{{item}}"
   become: yes
   with_items:
     - pv.yml
@@ -14,15 +16,11 @@
 
 - name: Helm List
   command: helm list
-  args:
-    chdir: /root/linux-amd64
   become: yes
   become_user: root
   register: helm_list
 
 - name: Install sonarqube
   command: helm install --name sonarqube stable/sonarqube
-  args: 
-    chdir: ~/linux-amd64
   become: yes
   when: "'sonarqube' not in helm_list.stdout"
