--- a/roles/app-jenkins/templates/ingress.yml
+++ b/roles/app-jenkins/templates/ingress.yml
@@ -1,16 +1,20 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: registry
+  name: jenkins
   annotations:
     kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
 spec:
+  tls:
+  - hosts:
+    - nexus.{{domaine}}
+    secretName: certificate
   rules:
-  - host: registry.{{domaine}}
+  - host: jenkins.{{domaine}}
     http:
       paths:
       - path: /
         backend:
-          serviceName: registry
-          servicePort: 8082
+          serviceName: jenkins
+          servicePort: 8080
