--- a/roles/app-nexus/templates/ingress-registry.yml
+++ b/roles/app-nexus/templates/ingress-registry.yml
@@ -1,16 +1,20 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: nexus
+  name: registry
   annotations:
     kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
 spec:
+  tls:
+  - hosts:
+    - nexus.{{domaine}}
+    secretName: certificate
   rules:
-  - host: nexus.{{domaine}}
+  - host: registry.{{domaine}}
     http:
       paths:
       - path: /
         backend:
-          serviceName: nexus-sonatype-nexus
-          servicePort: 8080
+          serviceName: registry
+          servicePort: 8082
