--- a/roles/app-sonarqube/templates/ingress.yml
+++ b/roles/app-sonarqube/templates/ingress.yml
@@ -1,17 +1,21 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: jenkins
+  name: sonarqube
   annotations:
-    kubernetes.io/ingress.class: traefik
+    kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
     traefik.frontend.rule.type: PathPrefixStrip
 spec:
+  tls:
+  - hosts:
+    - nexus.{{domaine}}
+    secretName: certificate
   rules:
-  - host: jenkins.{{domaine}}
+  - host: sonarqube.{{domaine}}
     http:
       paths:
       - path: /
         backend:
-          serviceName: jenkins
-          servicePort: 8080
+          serviceName: sonarqube-sonarqube
+          servicePort: 9000
