--- a/roles/app-jenkins/templates/ingress.yml
+++ b/roles/app-jenkins/templates/ingress.yml
@@ -4,6 +4,7 @@ metadata:
   name: jenkins
   annotations:
     kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: 'true'
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
 spec:
   tls:
