--- a/roles/app-nexus/templates/ingress-registry.yml
+++ b/roles/app-nexus/templates/ingress-registry.yml
@@ -5,6 +5,10 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+    ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.org/proxy-connect-timeout: "30s"
+    nginx.org/proxy-read-timeout: "20s"
+    nginx.org/client-max-body-size: "50m"    
 spec:
   tls:
   - hosts:
