--- a/inventories/prod/group_vars/all/all.yaml
+++ b/inventories/prod/group_vars/all/all.yaml
@@ -21,7 +21,7 @@ certificates:
   - nexus.{{domaine}}
   - sonarqube.{{domaine}}
   - keycloak.{{domaine}}
-  - kibana.{{domaine}}
+ # - kibana.{{domaine}}
   - meltingpoc.{{domaine}}
   - recyclette.{{domaine}}
   - wallboard.{{domaine}}
