--- a/roles/app-nexus/tasks/main.yml
+++ b/roles/app-nexus/tasks/main.yml
@@ -1,22 +1,20 @@
-
 - name: Copy Resources
-  template: 
+  template:
     src: "templates/{{item}}"
     dest: "/tmp/{{item}}"
   with_items:
-    - pv.yml
-    - ingress.yml
-    - ingress-registry.yml
-    - patch.yml
+  - pv.yml
+  - ingress.yml
+  - ingress-registry.yml
+  - patch.yml
 
 - name: Create Resources
   command: "kubectl apply -f /tmp/{{item}}"
   become: yes
   with_items:
-    - pv.yml
-    - ingress.yml
-    - ingress-registry.yml
-    - patch.yml
+  - pv.yml
+  - ingress.yml
+  - ingress-registry.yml
 
 - name: Helm List
   command: helm list
@@ -28,6 +26,9 @@
   command: helm install --name nexus stable/sonatype-nexus
   become: yes
   when: "'nexus' not in helm_list.stdout"
+
+  #- name: "Patch Svc"
+  #  command: kubectl patch svc nexus-sonatype-nexus --patch "$(cat /tmp/patch.yml)"
 
 - name: Svc List
   command: kubectl get svc
