--- a/roles/ingress-nginx/tasks/main.yml
+++ b/roles/ingress-nginx/tasks/main.yml
@@ -1,4 +1,3 @@
-
 - name: Mandatory Command
   command: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/mandatory.yaml
   become: yes
@@ -10,18 +9,30 @@
   become_user: root
   register: helm_list
 
-- name: Copy Resources 
+- name: Copy Resources
   template:
     src: "templates/{{item}}"
     dest: "/tmp/{{item}}"
   with_items:
-    - service.j2
+  - service.j2
+  - patch.yml
 
 - name: Create Resources
   command: "kubectl apply -f /tmp/{{item}}"
   become: yes
   with_items:
-    - service.j2
+  - service.j2
+
+- set_fact:
+    patch:
+      data:
+        "proxy-body-size": "100m"
+        "proxy-buffering": "on"
+
+
+#- name: Patch ConfigMap
+#  command: kubectl patch configmap nginx-configuration -n ingress-nginx --patch 'data.proxy-body-size: 100m'
+# become: yes
 
 #- name: Install nginx-ingress
 #  command: helm install stable/nginx-ingress --name nginx-ingress --set rbac.create=true
